<resources>
    <string name="app_name">Submission 2 Fundamental</string>
    <string name="title_username">Username</string>
    <string name="title_location">Location</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="title_id">ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_settings">Settings</string>
    <string name="title_no_data">Search to Show User Data</string>
    <string name="no_following">There is no following</string>
    <string name="no_followers">There is no followers</string>
    <string name="title_name">Name</string>
    <string name="title_company">Company</string>
    <string name="title_blog">Blog</string>
    <string name="title_favorites">Favorites</string>
</resources>