<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detailImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            tools:src="@tools:sample/avatars"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/item_text_header"
                    android:id="@+id/detailUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="@string/title_username" />

                <ImageButton
                    android:id="@+id/detailBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_favorite_24"
                    app:tint="@color/light"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/white"
                    app:srcCompat="@drawable/ic_baseline_favorite_24"/>
            </LinearLayout>

            <TextView
                style="@style/item_text"
                android:id="@+id/detailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:text="@string/title_name" />

            <TextView
                style="@style/item_text"
                android:id="@+id/detailLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/title_location"/>

            <TextView
                style="@style/item_text"
                android:id="@+id/detailCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/title_company"/>

            <TextView
                style="@style/item_text"
                android:id="@+id/detailBlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/title_blog"/>
        </LinearLayout>
    </LinearLayout>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_followers" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_following" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>