<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/userName"
        style="@style/item_text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        tools:text="@string/title_username"
        app:layout_constraintStart_toEndOf="@+id/userImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userId"
        style="@style/item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/userFollowers"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:text="@string/title_id" />

    <TextView
        android:id="@+id/userFollowers"
        style="@style/item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/userImage"
        app:layout_constraintStart_toStartOf="@+id/userId"
        tools:text="@string/title_followers" />

    <TextView
        style="@style/item_text"
        android:id="@+id/userFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/title_following"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/userFollowers"
        app:layout_constraintTop_toTopOf="@+id/userFollowers" />


</androidx.constraintlayout.widget.ConstraintLayout>